--- a/MemoApi/MemoApi/MemoApi.Untils/MemoApi.Utils.csproj
+++ b/MemoApi/MemoApi/MemoApi.Untils/MemoApi.Utils.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <Compile Include="App_Start\LoggingConfig.cs" />
     <Compile Include="Attributes\LoggingActionFilterAttribute.cs" />
+    <Compile Include="Enums\ApiApplicationSettingEnum.cs" />
     <Compile Include="Enums\StatusCodeEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
