--- a/MemoApi/MemoApi/MemoApi/packages.config
+++ b/MemoApi/MemoApi/MemoApi/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
@@ -40,5 +41,6 @@
   <package id="TEC_Core_Web_Standard_Library" version="1.3.6" targetFramework="net48" />
   <package id="TEC_Core_Web_WebApi_Standard_Library" version="1.3.4" targetFramework="net48" />
   <package id="TimePeriodLibrary.NET" version="2.1.1" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
