--- a/MemoApi/MemoApi/MemoApi/MemoApi.WebApi.csproj
+++ b/MemoApi/MemoApi/MemoApi/MemoApi.WebApi.csproj
@@ -238,7 +238,6 @@
     <Compile Include="Attributes\LoggingActionFilterAttribute.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MemoController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -253,6 +252,9 @@
     <Compile Include="ThirdParty\SwaggerExampleValueAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\MemoApi.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -319,7 +321,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\Request\" />
     <Folder Include="Models\Response\" />
   </ItemGroup>
