--- a/MemoAndroid/app/src/main/AndroidManifest.xml
+++ b/MemoAndroid/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
         android:theme="@style/Theme.MemoApp"
         tools:targetApi="31">
         <activity
+            android:name=".AddActivity"
+            android:screenOrientation="portrait"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".EditActivity"
+            android:screenOrientation="portrait"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
